--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookieparser": "^0.1.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "joi": "^18.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
