--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookieparser": "^0.1.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
