--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "express-session": "^1.18.2",
     "joi": "^18.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.18.1",
-    "multer": "^2.0.2"
+    "mongoose": "^8.18.1"
   }
 }
